# Project-drf

./: .env  .env.example  Dockerfile  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  setup.cfg
apps/pizza/: filter.py  managers.py  models.py  serializer.py  urls.py  views.py
apps/pizza/migrations/: 0001_initial.py  0002_pizzamodel_day.py  0003_alter_pizzamodel_name_alter_pizzamodel_size.py  0004_alter_pizzamodel_options_alter_pizzamodel_table.py
apps/pizza_shop/: serializer.py  views.py
apps/pizza_shop/migrations/: 0001_initial.py
apps/user/: managers.py  models.py  serializer.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_profilemodel_options_usermodel_created_at_and_more.py
backend/apps/auth/: apps.py  serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py  models.py  routing.py
backend/apps/pizza/: apps.py  consumer.py  filter.py  models.py  routing.py  serializer.py  service.py  urls.py  views.py
backend/apps/pizza_shop/: apps.py  models.py  serializer.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: pagination.py
backend/templates/: base.html  recovery.html  register.html  spam.html  test_email.html
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_config/: rest_config.py
core/: models.py
core/enums/: regex_enum.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
pizza/: models.py  serializers.py  views.py
pizza/migrations/: 0001_initial.py
(+46 files in other folders)
